@@ -16,13 +16,7 @@
 # Street, Fifth Floor, Boston, MA 02110-1301, USA.
 
 
-"""List widget to display subtitle data.
-
-Module variables:
-
-    _ACTIVE_ATTR: pango.AttrList of the active column header label
-    _NORMAL_ATTR: pango.AttrList of a normal column header label
-"""
+"""List widget to display subtitle data."""
 
 
 import gobject
@@ -34,29 +28,44 @@ from gaupol.gtk.cellrend import *
 from gaupol.gtk.index import *
 
 
-_ACTIVE_ATTR = pango.AttrList()
-_ACTIVE_ATTR.insert(pango.AttrWeight(pango.WEIGHT_BOLD, 0, -1))
-_NORMAL_ATTR = pango.AttrList()
-_NORMAL_ATTR.insert(pango.AttrWeight(pango.WEIGHT_NORMAL, 0, -1))
-
-
 class View(gtk.TreeView):
 
     """List widget to display subtitle data.
 
-    Instance variables:
-
-        _active_col: Index of the active column
+    The index of the active column is saved as instance variable '_active_col'.
+    The active column header is styled with pango.AttrList according to class
+    variable '_ACTIVE_ATTR', other column headers as '_NORMAL_ATTR'.
     """
+
+    __metaclass__ = util.get_contractual_metaclass()
+    _ACTIVE_ATTR = pango.AttrList()
+    _ACTIVE_ATTR.insert(pango.AttrWeight(pango.WEIGHT_BOLD, 0, -1))
+    _NORMAL_ATTR = pango.AttrList()
+    _NORMAL_ATTR.insert(pango.AttrWeight(pango.WEIGHT_NORMAL, 0, -1))
 
     def __init__(self, edit_mode):
 
         gtk.TreeView.__init__(self)
-
         self._active_col = None
-
         self._init_props(edit_mode)
         self._init_signal_handlers()
+
+    def _get_header_label(self, col, edit_mode):
+        """Get a column header label that's wide enough."""
+
+        label = gtk.Label(col.display_name)
+        label.props.xalign = 0
+        label.show()
+        label.set_attributes(self._ACTIVE_ATTR)
+        width = label.size_request()[0]
+        if (col in (SHOW, HIDE, DURN)) and (edit_mode == const.MODE.FRAME):
+            spin = gtk.SpinButton()
+            digits = (0 if col == DURN else 5)
+            spin.set_digits(digits)
+            width = max(width, spin.size_request()[0])
+        label.set_size_request(width, -1)
+        label.set_attributes(self._NORMAL_ATTR)
+        return label
 
     def _get_renderer(self, col, edit_mode):
         """Initialize and return a new cell renderer."""
@@ -64,7 +73,6 @@ class View(gtk.TreeView):
         font = ("" if conf.editor.use_default_font else conf.editor.font)
         if col == NO:
             renderer = gtk.CellRendererText()
-            renderer.props.editable = False
             renderer.props.xalign = 1
         elif col in (SHOW, HIDE, DURN):
             if edit_mode == const.MODE.TIME:
@@ -73,42 +81,27 @@ class View(gtk.TreeView):
                 renderer = gtk.CellRendererSpin()
                 adjustment = gtk.Adjustment(0, 0, 99999999, 1, 10)
                 renderer.props.adjustment = adjustment
-                renderer.props.xalign = 1
-            renderer.props.editable = True
+            renderer.props.xalign = 1
         elif col in (MTXT, TTXT):
             renderer = MultilineCellRenderer()
-            renderer.props.editable = True
+        renderer.props.editable = (col != NO)
         renderer.props.font = font
         return renderer
 
     def _init_columns(self, edit_mode):
         """Initialize the tree view columns."""
 
-        for i in range(6):
-
-            name = const.COLUMN.display_names[i]
-            renderer = self._get_renderer(i, edit_mode)
-            column = gtk.TreeViewColumn(name, renderer , text=i)
+        for col in const.COLUMN.members:
+            renderer = self._get_renderer(col, edit_mode)
+            name = col.display_name
+            column = gtk.TreeViewColumn(name, renderer , text=col)
             self.append_column(column)
             column.set_clickable(True)
             column.set_resizable(True)
-            column.set_visible(i in conf.editor.visible_cols)
-            column.set_expand(i in (4, 5))
-
-            # Set the header label wide enough.
-            label = gtk.Label(column.get_title())
-            label.props.xalign = 0
+            column.set_visible(col in conf.editor.visible_cols)
+            column.set_expand(col in (MTXT, TTXT))
+            label = self._get_header_label(col, edit_mode)
             column.set_widget(label)
-            label.show()
-            label.set_attributes(_ACTIVE_ATTR)
-            width = label.size_request()[0]
-            if i in (SHOW, HIDE, DURN) and edit_mode == const.MODE.FRAME:
-                spin = gtk.SpinButton()
-                digits = (0 if i == DURN else 5)
-                spin.set_digits(digits)
-                width = max(width, spin.size_request()[0])
-            label.set_size_request(width, -1)
-            label.set_attributes(_NORMAL_ATTR)
 
         # Set the data in the number column automatically.
         def set_number(column, renderer, store, itr):
@@ -142,11 +135,14 @@ class View(gtk.TreeView):
 
         util.connect(self, self, "cursor-changed")
         util.connect(self, self, "key-press-event")
-
         conf.connect(self, "editor", "font")
         conf.connect(self, "editor", "length_unit")
         conf.connect(self, "editor", "show_lengths_cell")
         conf.connect(self, "editor", "use_default_font")
+
+    def _invariant(self):
+        if self._active_col is not None:
+            assert self._active_col in const.COLUMN.members
 
     @util.asserted_return
     def _on_conf_editor_notify_font(self, *args):
@@ -189,6 +185,13 @@ class View(gtk.TreeView):
 
         self.set_enable_search(event.string.isdigit())
 
+    def get_focus_ensure(self, value):
+        store = self.get_model()
+        if value[0] is not None:
+            assert 0 <= value[0] < len(store)
+        if value[1] is not None:
+            assert value[1] in const.COLUMN.members
+
     def get_focus(self):
         """Get the row and column of the current focus."""
 
@@ -199,16 +202,30 @@ class View(gtk.TreeView):
             col = self.get_columns().index(col)
         return row, col
 
+    def get_selected_rows_ensure(self, value):
+        store = self.get_model()
+        for row in value:
+            assert 0 <= row < len(store)
+
     def get_selected_rows(self):
         """Get a list of the selected rows."""
 
         rows = self.get_selection().get_selected_rows()[1]
         return [x[0] for x in rows]
 
+    def scroll_to_row_require(self, row):
+        store = self.get_model()
+        assert 0 <= row < len(store)
+
     def scroll_to_row(self, row):
-        """Scroll to row."""
+        """Scroll view until row is visible."""
 
         self.scroll_to_cell(row, None, True, 0.5, 0)
+
+    def select_rows_require(self, rows):
+        store = self.get_model()
+        for row in rows:
+            assert 0 <= row < len(store)
 
     def select_rows(self, rows):
         """Select rows, clearing previous selection."""
@@ -219,11 +236,15 @@ class View(gtk.TreeView):
         for lst in util.get_ranges(rows):
             selection.select_range(lst[0], lst[-1])
 
-    def set_focus(self, row, col=None):
-        """Set the focus to row, col.
+    def set_focus_require(self, row, col=None):
+        store = self.get_model()
+        assert -1 <= row < len(store)
+        if col is not None:
+            assert col in const.COLUMN.members
 
-        row can be -1 for the last row.
-        """
+    def set_focus(self, row, col=None):
+        """Set the focus to row, col."""
+
         if row == -1:
             row = len(self.get_model()) - 1
         if col is not None:
@@ -238,8 +259,8 @@ class View(gtk.TreeView):
         assert col != self._active_col
         if self._active_col is not None:
             label = self.get_column(self._active_col).get_widget()
-            label.set_attributes(_NORMAL_ATTR)
+            label.set_attributes(self._NORMAL_ATTR)
         if col is not None:
             label = self.get_column(col).get_widget()
-            label.set_attributes(_ACTIVE_ATTR)
+            label.set_attributes(self._ACTIVE_ATTR)
         self._active_col = col
