@@ -1,5 +1,10 @@
 2007-05-22  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
+	* gaupol/gtk/view.py:
+	Add contracts and clean up code.
+
+2007-05-22  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
 	* gaupol/gtk/output.py:
 	Minor changes.
 
